[package]
name = "pattern_matcher"
version = "0.1.0"
authors = ["owen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dictionary_trie = {path = "../../tools/dictionary_trie"}
file_reader = {path = "../../tools/file_reader"}
converter = {path = "../../tools/converter"}